<resources>
    <string name="app_name">BigWay Conductor</string>
    <string name="action_settings">Settings</string>
    <string name="usuario">USUARIO</string>
    <string name="password">CONTRASEÑA</string>
    <string name="SigIn">INICIAR SESIÓN</string>
    <string name="Ajustes">Ajustes</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Ayuda">Necesita ayuda</string>
    <string name="miUbicacion">Mi ubicacion</string>
    <string name="accesoConductor">Acceso Conductor</string>
    <string name="CANCEL">CANCELAR</string>
    <string name="OK">OK</string>
    <string name="Notificacion">Notificacion</string>
    <string name="Notification">Servicios Pendientes !!</string>
    <string name="UbicacionCliente">Ubicacion cliente</string>
    <string name="motivo">Motivo</string>
    <string name="importante">IMPORTANTE !!</string>
    <string name="ServicioAdicionales">Servicio Adicional</string>
    <string name="aireAcondicionado">Aire acondicionado</string>
    <string name="peaje">PEAJE</string>
    <string name="tiempoEspera">TIEMPO DE ESPERA</string>
    <string name="modificarRuta">MODIFICAR RUTA</string>
    <string name="minutos"># minutos</string>
    <string name="detalleServicio">Detalle del Servicio</string>
    <string name="screem_cargar">BIG WAY</string>
    <string name="InternetAccessRevision">No tiene conexion a internet !!!</string>
    <string name="gpsMensaje">El sistema GPS esta desactgivado, la aplicacion necesita del GPS,
                    Tiene que activarlo !!!</string>
    <string name="pagoExtraOrdinario">Pago Extra</string>
    <string name="Monto">Monto</string>
    <string name="llamarCliente">Llamar</string>
    <string name="detalle">DETALLE</string>
    <string name="Descripcion">Descripcion</string>
    <string name="Confirmar">Confirmar</string>
    <string name="mensajeAlert">¿ Esta seguro de aceptar este servicio ?</string>
    <string name="noDetalle">No hay detalle para este servicio</string>
    <string name="agregarPeaje">Añadir Peaje</string>
    <string name="operacionPeaje">¿ Esta seguro de  realizar esta operacion ?</string>
    <string name="servicioAsignado">Te an asignado un servicio!!!!</string>
    <string name="serviciosListos">Hay servicios listos!!!!</string>
    <string name="alerta">Alerta !!!</string>
    <string name="tienesServicios">Tiene servicios tomados, Termine los servicios !!!</string>
    <string name="llamarCentral">Llame a nuestra Central</string>
    <string name="telefono1">TELEFONO  1</string>
    <string name="msnCerrar_sesion">Esta seguro de cerrar sesión</string>
    <string name="desactivatTurno">¿ Esta seguro de desactivar su turno ?</string>
    <string name="ubUser">Ubiqué al cliente</string>
    <string name="AgExtras">Agregar Extras</string>
    <string name="TerServis">Terminé servicio</string>
    <string name="canServis">Cancelar servicio</string>
    <string name="miUbic">Mi ubicación</string>
    <string name="ServisNoTerminado">No termino el servicio</string>
    <string name="elijirVehiculo">Elija su vehículo</string>


</resources>
