<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
   >
    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:title="@string/accesoConductor"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/LinearLayoutLogin"
        android:layout_gravity="center_horizontal"
        android:fitsSystemWindows="true"
        android:gravity="center">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginRight="@dimen/marginRigth"
            android:drawableLeft="@drawable/ic_account_circle_"
            android:drawablePadding="@dimen/padinDrawable"
            android:textColorHint="@color/hintColor"
            android:inputType="number"
            android:ems="10"
            android:maxLength="8"
            android:hint="@string/usuario"
            android:id="@+id/editUser"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginRight="@dimen/marginRigth"
            android:drawablePadding="@dimen/padinDrawable"
            android:drawableLeft="@drawable/ic_lock_open_black_"
            android:textColorHint="@color/hintColor"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editPass"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginRight="@dimen/marginRigth"
            android:text="@string/SigIn"
            android:textColor="@color/white"
            android:id="@+id/btnLoginDriver"
            android:background="@drawable/selector_buton"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</LinearLayout>