<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_border_button_alert">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen15"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginRight="@dimen/marginRigth"
            android:textSize="@dimen/dimen18"
            android:gravity="center"
            android:text="@string/elijirVehiculo"
            android:textColor="@color/black"
            android:id="@+id/lblVehiculo"
            android:layout_gravity="center_horizontal" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginRight="@dimen/marginRigth"
            android:id="@+id/spinnerVehiculoElejir"
            android:background="@drawable/selector_spiner"
            android:layout_gravity="center_horizontal" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen15"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/btnCancel"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:background="@drawable/selector_buton"
                android:textColor="@color/white"
                android:text="@string/CANCEL"/>
            <Button
                android:id="@+id/btnOk"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:textColor="@color/white"
                android:background="@drawable/selector_buton"
                android:layout_marginLeft="@dimen/dimen15"
                android:text="@string/OK"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>