<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">
        <ImageView
            android:id="@+id/ImgButtonCancelAlert"
            android:clickable="true"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/selector_cancel"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen10"
        android:paddingBottom="@dimen/dimen10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen15"
            android:layout_marginRight="@dimen/dimen15"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen25"
                android:textStyle="bold"
                android:text="Estados de Servicio"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen15"
            android:layout_marginLeft="@dimen/dimen15"
            android:layout_marginRight="@dimen/dimen15"
            android:clickable="true"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:background="@color/grease"
                android:src="@drawable/ic_insert_emoticon_black_24dp"/>
            <TextView
                android:id="@+id/txtUbiCliente"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center|left"
                android:paddingLeft="@dimen/dimenCinco"
                android:paddingRight="@dimen/dimenCinco"
                android:textColor="@color/black"
                android:background="@drawable/selector_text_adiccionales"
                android:textSize="@dimen/dimen18"
                android:text="@string/ubUser"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen15"
            android:layout_marginLeft="@dimen/dimen15"
            android:layout_marginRight="@dimen/dimen15"
            android:clickable="true"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:padding="@dimen/dimen2"
                android:background="@color/grease"
                android:src="@drawable/circle_mas"/>
            <TextView
                android:id="@+id/txtAgExtras"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center|left"
                android:paddingLeft="@dimen/dimenCinco"
                android:paddingRight="@dimen/dimenCinco"
                android:textColor="@color/black"
                android:background="@drawable/selector_text_adiccionales"
                android:textSize="@dimen/dimen18"
                android:text="@string/AgExtras"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen15"
            android:layout_marginLeft="@dimen/dimen15"
            android:layout_marginRight="@dimen/dimen15"
            android:clickable="true"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:padding="@dimen/dimen2"
                android:background="@color/grease"
                android:src="@drawable/ic_mano"/>
            <TextView
                android:id="@+id/txtTermServis"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center|left"
                android:paddingLeft="@dimen/dimenCinco"
                android:paddingRight="@dimen/dimenCinco"
                android:textColor="@color/black"
                android:background="@drawable/selector_text_adiccionales"
                android:textSize="@dimen/dimen18"
                android:text="@string/TerServis"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen15"
            android:layout_marginLeft="@dimen/dimen15"
            android:layout_marginRight="@dimen/dimen15"
            android:clickable="true"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:padding="@dimen/dimen2"
                android:background="@color/grease"
                android:src="@drawable/ic_circle_x"/>
            <TextView
                android:id="@+id/txtServisNoTerminado"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center|left"
                android:paddingLeft="@dimen/dimenCinco"
                android:paddingRight="@dimen/dimenCinco"
                android:textColor="@color/black"
                android:background="@drawable/selector_text_adiccionales"
                android:textSize="@dimen/dimen18"
                android:text="@string/ServisNoTerminado"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen15"
            android:layout_marginLeft="@dimen/dimen15"
            android:layout_marginRight="@dimen/dimen15"
            android:clickable="true"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:padding="@dimen/dimen2"
                android:background="@color/grease"
                android:src="@drawable/ic_ubicacion"/>
            <TextView
                android:id="@+id/txtMiUbicacion"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center|left"
                android:paddingLeft="@dimen/dimenCinco"
                android:paddingRight="@dimen/dimenCinco"
                android:textColor="@color/black"
                android:background="@drawable/selector_text_adiccionales"
                android:textSize="@dimen/dimen18"
                android:text="@string/miUbic"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>