<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="@dimen/dimenCinco"
                android:layout_marginTop="@dimen/dimenCinco"
                android:clickable="true"
                android:id="@+id/ImgButtonCancelAlert"
                android:background="@drawable/ic_cancel_black_24dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginRight="@dimen/marginLeftDiez"
            android:layout_marginLeft="@dimen/marginLeftDiez"
            android:layout_marginTop="@dimen/marginLeftDiez"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="25dp"
            android:text="@string/importante"
            android:id="@+id/lblTxtTituloAlert"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginRight="@dimen/marginLeftDiez"
            android:layout_marginLeft="@dimen/marginLeftDiez"
            android:layout_marginTop="@dimen/marginLeftDiez"
            android:textSize="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/lblMensajeAlert"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="@dimen/marginLeftDiez"
            android:layout_marginLeft="@dimen/marginLeftDiez"
            android:layout_marginTop="@dimen/marginLeftDiez"
            android:paddingLeft="@dimen/marginLeftDiez"
            android:hint="@string/motivo"
            android:textColorHint="@color/hintColor"
            android:background="@drawable/shape_border"
            android:id="@+id/editMotivo"
            android:layout_gravity="center_horizontal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="@dimen/marginLeftDiez"
            android:layout_marginLeft="@dimen/marginLeftDiez"
            android:layout_marginTop="@dimen/marginLeftDiez"
            android:background="@color/viewColor"
            android:id="@+id/viewLinea"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:visibility="visible"
            android:layout_marginRight="@dimen/marginLeftDiez"
            android:layout_marginLeft="@dimen/marginLeftDiez"
            android:layout_marginTop="@dimen/marginLeftDiez"
            android:textSize="18dp"
            android:id="@+id/lblTipoPago"
            android:textColor="@color/black"
            android:text="TIPO DE PAGO"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_marginRight="@dimen/marginLeftDiez"
            android:layout_marginLeft="@dimen/marginLeftDiez"
            android:layout_marginTop="@dimen/marginLeftDiez"
            android:text="Contado"
            android:id="@+id/checkPagoContado"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_marginRight="@dimen/marginLeftDiez"
            android:layout_marginLeft="@dimen/marginLeftDiez"
            android:layout_marginTop="@dimen/marginLeftDiez"
            android:text="Credito"
            android:id="@+id/checkPagoCredito"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="@dimen/marginLeftDiez"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:layout_width="130dp"
                android:layout_height="35dp"
                android:textColor="@color/selector_text_colort_alert"
                android:background="@drawable/selector_button_alert"
                android:id="@+id/btnOk"
                android:text="@string/OK"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>